# opengl-graphics-engine

./: LICENSE  README.md
18-19/project/: alien.cpp  eng  generator.cpp
18-19/project/models/: box.3d  cone.3d  earth.3d  jupiter.3d  mars.3d  mercury.3d  neptune.3d  saturn.3d  sphere.3d  sun.3d
18-19/project/project_CG/: alien.h  gen  main.cpp  makefile
18-19/project/project_CG/models/: plane.3d  shapes.xml  uranus.3d  venus.3d
18-19/project/tinyxml/: xmltest
2020/Fase-1/engine/: CMakeLists.txt  main.cpp
2020/Fase-1/engine/Models/: load-graphics.cpp  load-xml.cpp
2020/Fase-1/engine/Models/headers/: load-graphics.h  load-xml.h  model-info.h
2020/Fase-1/engine/XML-Examples/: ex-config-1.xml
2020/Fase-1/examples/Model-Read-Tests/: box_div_1.3d  box_xpto.3d  cone.3d  cone_xpto.3d  plane_3.3d  sphere.3d
2020/Fase-1/examples/XML-Examples/: ex-config-1.xml
2020/Fase-1/generator/: CMakeLists.txt  main.cpp
2020/Fase-1/generator/Model-Generator/: model-generator.cpp  model-generator.h
2020/Fase-1/generator/Model-Vertices-Files/: box_div_0.3d  cone.3d  plane_5.3d
2020/Fase-1/generator/XML-Examples/: box.3d  plane.3d
2020/Fase-2/engine/: main.cpp
2020/Fase-2/engine/Models/: draw-elements.cpp  load-graphics.cpp  load-xml.cpp  model-info.cpp
2020/Fase-2/engine/Models/headers/: draw-elements.h  load-graphics.h  load-xml.h  model-info.h
2020/Fase-2/examples/XML-Examples/: default-config.xml  ex-config-2.xml  ex-config-2_SAVE.xml
2020/Fase-2/generator/Model-Generator/: model-generator.h
2020/Fase-3/engine/: CMakeLists.txt  main.cpp
2020/Fase-3/engine/Models/: VBO.cpp  catmull-rom.cpp  draw-elements.cpp  load-graphics.cpp  load-xml.cpp  model-info.cpp
2020/Fase-3/engine/Models/headers/: VBO.h  catmull-rom.h  draw-elements.h  model-info.h
2020/Fase-3/examples/Models.3d/: teapot.3d.indexed
2020/Fase-3/examples/XML-Examples/: SistemaSolar.xml  default-config.xml  std-translation.xml  time-translation.xml
2020/Fase-3/generator/: main.cpp
2020/Fase-3/generator/Model-Generator/: bezier-patch.cpp
2020/Fase-3/generator/Model-Generator/headers/: bezier-patch.h
2020/Fase-4/engine/: CMakeLists.txt
2020/Fase-4/engine/Models/: VBO.cpp  catmull-rom.cpp  draw-elements.cpp  lights.cpp  load-graphics.cpp  load-xml.cpp  model-info.cpp  textures.cpp
2020/Fase-4/engine/Models/headers/: VBO.h  catmull-rom.h  draw-elements.h  lights.h  load-graphics.h  load-xml.h  model-info.h  textures.h
2020/Fase-4/examples/Models.3d/: box.3d.indexed  cone.3d.indexed  plane.3d.indexed  sphere.3d.indexed  teapot.3d.indexed
2020/Fase-4/examples/XML-Examples/: SistemaSolar.xml  light-config.xml  primitives.xml  sphere-config.xml  spotlight.xml  teapot.xml
2020/Fase-4/generator/: CMakeLists.txt  main.cpp
2020/Fase-4/generator/Model-Generator/: bezier-patch.cpp  model-generator.cpp
2020/Fase-4/generator/Model-Generator/headers/: model-generator.h  model-info.h
2020/Other/: dates.txt
Computer-Graphics/Fase-1/engine/: main.cpp
Computer-Graphics/Fase-1/engine/Models/: load-graphics.cpp  model-info.cpp
Computer-Graphics/Fase-1/engine/Models/headers/: load-xml.h  model-info.h
Computer-Graphics/Fase-1/examples/XML-Examples/: ex-config-1.xml
Computer-Graphics/Fase-2/engine/: CMakeLists.txt
Computer-Graphics/Fase-2/engine/Models/: load-graphics.cpp  load-xml.cpp
Computer-Graphics/Fase-2/generator/: main.cpp
Computer-Graphics/Fase-3/engine/Models/: draw-elements.cpp  load-graphics.cpp  load-xml.cpp  model-info.cpp
Computer-Graphics/Fase-3/examples/XML-Examples/: sphere-config.xml  teapot-config.xml
Computer-Graphics/Fase-3/generator/Model-Generator/: bezier-patch.cpp  model-generator.cpp
Computer-Graphics/Fase-4/engine/: CMakeLists.txt  main.cpp
Computer-Graphics/Fase-4/engine/Models/: VBO.cpp  draw-elements.cpp  lights.cpp  load-xml.cpp
Computer-Graphics/Fase-4/examples/Models.3d/: box.3d.indexed  cone.3d.indexed  sphere.3d  sphere.3d.indexed  teapot.3d.indexed
Computer-Graphics/Fase-4/examples/XML-Examples/: SistemaSolar.xml  directional.xml  teapot.xml
Computer-Graphics/Fase-4/generator/Model-Generator/: model-generator.cpp  model-info.cpp
Computer-Graphics/Other/orbits_script/: main.c
(+9 files in other folders)
